--- a/index.html
+++ b/index.html
@@ -223,17 +223,14 @@
                                     </div>
                                 </div>
                             </div>
+
+
                             <div class="row">
-                                <div class="col col-md-6">
-                                    <div class="img-holder right-align-text story-slider">
-                                        <img src="assets/images/story/img-2.jpg" alt class="img img-responsive">
-                                    </div>
-                                </div>
-                                <div class="col col-md-6 text-holder">
+                                <div class="col col-md-6 text-holder right-heart">
                                     <span class="heart">
                                         <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                                     </span>
-                                    <div class="story-text">
+                                    <div class="story-text right-align-text">
                                         <h3>Behrana Sahib </h3>
                                         <span class="date">Dec 9 2020, 11 AM</span>
                                         <p>Your presence will be our great pleasure at behrana sahib of Jhulelal Ji. Join us and enjoy some sindhi style dance & music. Lunch to be followed. </p> <br>
@@ -241,14 +238,22 @@
                                         <div class="btn btn-2"><a class="popup-gmaps" href="https://maps.google.com/maps?q=sindhu%20bhawan%20agra&t=&z=13&ie=UTF8&iwloc=&output=embed">Location</a></div>
                                     </div>
                                 </div>
+                                <div class="col col-md-6">
+                                    <div class="img-holder right-align-text story-slider">
+                                        <img src="assets/images/story/img-2.jpg" alt class="img img-responsive">
+                                    </div>
+                                </div>
                             </div>
+
+
+
                             <div class="row">
                                 <div class="col col-md-6 text-holder right-heart">
                                     <span class="heart">
                                         <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                                     </span>
                                     <div class="story-text right-align-text">
-                                        <h3></h3>
+                                        <h3>Mehandi</h3>
                                         <span class="date">Dec 9 2020, 5 PM</span>
                                         <p> Join us and Mehandi ceremony and get some henna. </p>
                                         <snap>Venue: </snap>  <p>Sindhu Bhawan, F- 42,Kamla Nagar, Agra</p>
@@ -261,30 +266,32 @@
                                     </div>
                                 </div>
                             </div>
+
+
                             <div class="row">
-                                <div class="col col-md-6">
-                                    <div class="img-holder video-holder">
-                                        <img src="assets/images/story/img-4.jpg" alt class="img img-responsive">
-                                        <div class="video-btn">
-                                            <ul>
-                                                <li><a href="https://www.youtube.com/watch?v=tm-YxjrQVZw" class="video-btn" data-type="iframe">
-                                                <i class="fi flaticon-play-button"></i>
-                                                </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col col-md-6 text-holder">
+                                <div class="col col-md-6 text-holder right-heart">
                                     <span class="heart">
                                         <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                                     </span>
-                                    <div class="story-text">
+                                    <div class="story-text right-align-text">
                                         <h3>Wedding</h3>
                                         <span class="date">Dec 11 2020, 2 PM</span>
                                         <p>It is a great pleasure to invite you on the wedding day of our daughter. Please join us and bless her for happy and healthy life. Reception to be followed.</p>
                                         <snap>Venue: </snap>  <p>Hotel Marwar Excellency, Jodhpur </p>
                                         <div class="btn btn-2"><a class="popup-gmaps" href="https://maps.google.com/maps?q=Hotel%20Marwar%20Excellency%2C%20Jodhpur&t=&z=13&ie=UTF8&iwloc=&output=embed">Location</a></div>
+                                    </div>
+                                </div>
+                                <div class="col col-md-6">
+                                    <div class="img-holder video-holder right-align-text story-slider">
+                                        <img src="assets/images/story/img-4.jpg" alt class="img img-responsive">
+                                        <div class="video-btn">
+                                            <ul>
+                                                <li><a href="https://www.youtube.com/watch?v=tm-YxjrQVZw" class="video-btn" data-type="iframe">
+                                                    <i class="fi flaticon-play-button"></i>
+                                                </a>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
