--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                                 </div>
                             </div>
                             <div class="contact-form form-style">
-                                <form id="rsvp-form" action="mail.php" class="validate-rsvp-form" method="post">
+                                <form id="rsvp-form" action="https://formspree.io/f/xknpvnor" class="validate-rsvp-form" method="post">
                                     <div class="row">
                                         <div class="col-12 col-sm-6">
                                             <input type="text" placeholder="Your Name*" id="fname" name="name">
