--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                                         </div>
 
                                         <div class="col-12 col-sm-12">
-                                            <textarea class="contact-textarea" placeholder="Message" name="notes"></textarea>
+                                            <textarea class="contact-textarea" placeholder="Message" name="blessings"></textarea>
                                         </div>
                                         <div class="col-12 text-center">
                                             <button id="submit" class="submit">Send Invitation</button>
