--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                                 <div class="row">
                                                     <div class="col-md-5 col-12">
                                                         <div class="event-img">
-                                                            <img src="assets/images/events/img-1.jpg" alt>
+                                                            <img src="assets/images/events/1.jpg" alt>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-7 col-12">
@@ -631,8 +631,8 @@
                         </div>
                         <div class="gallery-container gallery-fancybox masonry-gallery">
                             <div class="grid EnagagEment PartIes">
-                                <a href="assets/images/gallery/img-1.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="assets/images/gallery/img-1.jpg" alt class="img img-responsive">
+                                <a href="assets/images/gallery/1.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="assets/images/gallery/1.jpg" alt class="img img-responsive">
                                     <div class="icon">
                                         <i class="ti-plus"></i>
                                     </div>
