--- a/index.html
+++ b/index.html
@@ -689,7 +689,25 @@
                 </div>
             </div>
         </section>-->
-        <!--End project area--> 
+        <!--End project area-->
+
+    <div class="count-down-area-2 count-down-area-sub">
+        <section class="count-down-section section-padding parallax" data-speed="7">
+            <div class="container">
+                <div class="col-lg-12">
+                    <div class="cta-content">
+                        <h2>Waiting to welcome you</h2>
+                        <p>Mr. I. K. Narwani (Ph. : 9412169996),<br> Mr. Jayant Narwani (Ph. : 9410201112),
+                           <br> Mr. Lila Ram Narwani, <br>Mr. Prakash Chand Narwani,<br> Mr Harish Kumar Narwani,<br> Mr DR Narwani,<br> Mr. Kamlesh Narwani
+                            <br>Mr. Manohar Pahelajani </p>
+                        <!-- <div class="btn btn-2"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>-->
+                    </div>
+                </div>
+                <!-- end row -->
+            </div>
+            <!-- end container -->
+        </section>
+    </div>
 
         <!-- rsvp-area strat -->
         <div id="rsvp" class="rsvp-area go-rsvp-area">
