--- a/index.html
+++ b/index.html
@@ -319,126 +319,7 @@
             </div>
         </div>
         </div>
-        <!-- cta area end-->
-        <!-- event-area -->
-      <!--  <div id="event" class="event-section">
-            <div class="container">
-                <div class="col-12">
-                    <div class="section-title text-center">
-                        <h2>When & Where</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="tabs-site-button">
-                            <div class="event-tabs">
-                                <div class="row">
-                                    <div class="col-md-8 col-md-offset-3 col-sm-11 col-sm-offset-1 col-xs-10 col-xs-offset-2">
-                                        <ul class="nav nav-tabs">
-                                            <li class="event-content"><a data-toggle="tab" href="#turbo">Sangeet</a></li>
-                                            <li class="event-content"><a data-toggle="tab" href="#tyre">Party</a></li>
-                                            <li class="event-content"><a data-toggle="tab" href="#car-1">Dinner</a></li>
-                                            <li class="event-content"><a data-toggle="tab" href="#repair">Reception</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-md-12 col-12">
-                                    <div class="tab-content">
-                                        <div id="turbo" class="tab-pane active">
-                                             <div class="event-wrap">
-                                                <div class="row">
-                                                    <div class="col-md-5 col-12">
-                                                        <div class="event-img">
-                                                            <img src="assets/images/events/1.jpg" alt>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-7 col-12">
-                                                        <div class="event-text">
-                                                            <h3>Sham-e-Sangeet</h3>
-                                                            <span>Sunday, 25 July 18, 9.00 AM-5.00 PM</span>
-                                                            <span>256 Apay Road,Califonia Bong, London</span>
-                                                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal </p>
-                                                            <div class="btn"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div id="tyre" class="tab-pane">
-                                            <div class="row">
-                                                 <div class="event-wrap">
-                                                    <div class="row">
-                                                        <div class="col-md-7">
-                                                            <div class="event-text event-text-2">
-                                                                <h3>Wedding Party</h3>
-                                                                <span>Sunday, 25 July 18, 9.00 AM-5.00 PM</span>
-                                                                <span>256 Apay Road,Califonia Bong, London</span>
-                                                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal </p>
-                                                                <div class="btn"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-5">
-                                                            <div class="event-img">
-                                                                <img src="assets/images/events/img-2.jpg" alt>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>  
-                                        </div>
-                                        <div id="car-1" class="tab-pane">
-                                            <div class="row">
-                                                 <div class="event-wrap">
-                                                    <div class="row">
-                                                        <div class="col-md-5">
-                                                            <div class="event-img">
-                                                                <img src="assets/images/events/img-3.jpg" alt>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-7">
-                                                            <div class="event-text">
-                                                                <h3>Wedding Dinner</h3>
-                                                                <span>Sunday, 25 July 18, 9.00 AM-5.00 PM</span>
-                                                                <span>256 Apay Road,Califonia Bong, London</span>
-                                                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal </p>
-                                                                <div class="btn"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>  
-                                        </div>
-                                        <div id="repair" class="tab-pane">
-                                            <div class="row">
-                                                 <div class="event-wrap">
-                                                    <div class="row">
-                                                        <div class="col-md-7">
-                                                            <div class="event-text event-text-2">
-                                                                <h3>Reception Party</h3>
-                                                                <span>Sunday, 25 July 18, 9.00 AM-5.00 PM</span>
-                                                                <span>256 Apay Road,Califonia Bong, London</span>
-                                                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal </p>
-                                                                <div class="btn"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-5">
-                                                            <div class="event-img">
-                                                                <img src="assets/images/events/img-4.jpg" alt>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>  
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-        <!-- event-area end -->
+
         <!-- groomsmen-bridesmaid-area start -->
         <div id="people" class="groomsmen-bridesmaid-area pt--150 pb--70">
             <div class="container">
@@ -610,9 +491,25 @@
                 </div>
             </div>
         </div>
+
+    <div class="cta-area-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="cta-content">
+                        <h2>Waiting to welcome you</h2>
+                        <p>Mr. I. K. Narwani (Ph. : 9412169996)<br> Mr. Jayant Narwani (Ph. : 9410201112)
+                            <br> Mr. Lila Ram Narwani <br>Mr. Prakash Chand Narwani
+                            <br> Mr Harish Kumar Narwani<br> Mr DR Narwani
+                            <br> Mr. Kamlesh Narwani <br>Mr. Manohar Pahelajani </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
         <!-- groomsmen-bridesmaid-area start -->
         <!--Start project area-->  
-<!--        <section id="gallery" class="gallery-section section-padding">
+      <section id="gallery" class="gallery-section section-padding">
             <div class="container">
                 <div class="col-l2">
                     <div class="section-title text-center">
@@ -624,15 +521,14 @@
                         <div class="gallery-filters">
                             <ul>
                                 <li><a data-filter="*" href="#" class="current">All</a></li>
-                                <li><a data-filter=".Pre-Wedding" href="#">Pre Wedding</a></li>
-                                <li><a data-filter=".EnagagEment" href="#">EnagagEment</a></li>
-                                <li><a data-filter=".PartIes" href="#">Parties</a></li>         
+                                <li><a data-filter=".EnagagEment" href="#">Engagement</a></li>
+                                <li><a data-filter=".Pre-Wedding" href="#">Jab We Met</a></li>
                             </ul>
                         </div>
                         <div class="gallery-container gallery-fancybox masonry-gallery">
                             <div class="grid EnagagEment PartIes">
-                                <a href="assets/images/gallery/1.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="assets/images/gallery/1.jpg" alt class="img img-responsive">
+                                <a href="assets/images/gallery/img-1.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="assets/images/gallery/img-1.jpg" alt class="img img-responsive">
                                     <div class="icon">
                                         <i class="ti-plus"></i>
                                     </div>
@@ -672,41 +568,20 @@
                                 
                             </div>
                             <div class="grid Pre-Wedding EnagagEment PartIes">
-                                <img src="assets/images/gallery/img-6.jpg" alt class="img img-responsive">
-                                <div class="icon">
-                                    <div class="video-btn">
-                                        <ul>
-                                            <li><a href="https://www.youtube.com/embed/uQBL7pSAXR8?autoplay=1" class="video-btn" data-type="iframe">
-                                            <i class="fi flaticon-play-button"></i>
-                                            </a>
-                                            </li>
-                                        </ul>
+                                <a href="assets/images/gallery/img-6.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="assets/images/gallery/img-6.jpg" alt class="img img-responsive">
+                                    <div class="icon">
+                                        <i class="ti-plus"></i>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>-->
+        </section>
         <!--End project area-->
 
-    <div class="count-down-area-2 count-down-area-sub">
-        <section class="count-down-section section-padding parallax" data-speed="7">
-            <div class="container">
-                <div class="col-lg-12">
-                    <div class="cta-content">
-                        <h2>Waiting to welcome you</h2>
-                        <p>Mr. I. K. Narwani (Ph. : 9412169996),<br> Mr. Jayant Narwani (Ph. : 9410201112),
-                           <br> Mr. Lila Ram Narwani, <br>Mr. Prakash Chand Narwani,<br> Mr Harish Kumar Narwani,<br> Mr DR Narwani,<br> Mr. Kamlesh Narwani
-                            <br>Mr. Manohar Pahelajani </p>
-                        <!-- <div class="btn btn-2"><a class="popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">Location</a></div>-->
-                    </div>
-                </div>
-                <!-- end row -->
-            </div>
-            <!-- end container -->
-        </section>
     </div>
 
         <!-- rsvp-area strat -->
