--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                             </ul>
                         </div>
                         <div class="gallery-container gallery-fancybox masonry-gallery">
-                            <div class="grid EnagagEment PartIes">
+                            <div class="grid EnagagEment">
                                 <a href="assets/images/gallery/img-1.jpg" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="assets/images/gallery/img-1.jpg" alt class="img img-responsive">
                                     <div class="icon">
@@ -534,7 +534,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="grid Pre-Wedding EnagagEment PartIes">
+                            <div class="grid EnagagEment">
                                 <a href="assets/images/gallery/img-2.jpg" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="assets/images/gallery/img-2.jpg" alt class="img img-responsive">
                                     <div class="icon">
@@ -550,7 +550,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="grid Pre-Wedding PartIes">
+                            <div class="grid Pre-Wedding ">
                                 <a href="assets/images/gallery/img-4.jpg" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="assets/images/gallery/img-4.jpg" alt class="img img-responsive">
                                     <div class="icon">
@@ -558,7 +558,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="grid EnagagEment">
+                            <div class="grid Pre-Wedding">
                                 <a href="assets/images/gallery/img-5.jpg" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="assets/images/gallery/img-5.jpg" alt class="img img-responsive">
                                     <div class="icon">
@@ -567,7 +567,7 @@
                                 </a>
                                 
                             </div>
-                            <div class="grid Pre-Wedding EnagagEment PartIes">
+                            <div class="grid Pre-Wedding">
                                 <a href="assets/images/gallery/img-6.jpg" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="assets/images/gallery/img-6.jpg" alt class="img img-responsive">
                                     <div class="icon">
