--- a/index.html
+++ b/index.html
@@ -500,8 +500,8 @@
                         <h2>Waiting to welcome you</h2>
                         <p>Mr. I. K. Narwani (Ph. : 9412169996)<br> Mr. Jayant Narwani (Ph. : 9410201112)
                             <br> Mr. Lila Ram Narwani <br>Mr. Prakash Chand Narwani
-                            <br> Mr Harish Kumar Narwani<br> Mr DR Narwani
-                            <br> Mr. Kamlesh Narwani <br>Mr. Manohar Pahelajani </p>
+                            <br> Mr. Harish Kumar Narwani<br> Mr. DR Narwani
+                            <br> Mr. Kamlesh Narwani <br>Mr. Manohar Pahlajani </p>
                     </div>
                 </div>
             </div>
@@ -627,7 +627,7 @@
 
 
         <!-- start site-footer -->
-        <footer class="site-footer">
+        <footer class="site-footer site-footer-2">
             <div class="container">
                 <div class="row">
                     <div class="text">
