--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
         <!-- start site-footer -->
         <footer class="site-footer site-footer-2">
             <div class="container">
-                <div class="row">
+                <div class="row" style="margin-left: -15;margin-top: 30px;">
                     <div class="text">
                         <h2>Lata  & Manish Forever</h2>
                         <p>Thank you</p>
