--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     </div>
         <!-- groomsmen-bridesmaid-area start -->
         <!--Start project area-->  
-<!--      <section id="gallery" class="gallery-section section-padding">
+      <section id="gallery" class="gallery-section section-padding">
             <div class="container">
                 <div class="col-l2">
                     <div class="section-title text-center">
@@ -579,7 +579,7 @@
                     </div>
                 </div>
             </div>
-        </section>-->
+        </section>
         <!--End project area-->
 
     </div>
@@ -600,9 +600,6 @@
                                     <div class="row">
                                         <div class="col-12 col-sm-6">
                                             <input type="text" placeholder="Your Name*" id="fname" name="name">
-                                        </div>
-                                        <div class="col-12  col-sm-6">
-                                            <input type="text" placeholder="Your Email*" id="email" name="email">
                                         </div>
 
                                         <div class="col-12 col-sm-12">
