--- a/index.html
+++ b/index.html
@@ -498,10 +498,10 @@
                 <div class="col-lg-12">
                     <div class="cta-content">
                         <h2>Waiting to welcome you</h2>
-                        <p>Mr. I. K. Narwani (Ph. : 9412169996)<br> Mr. Jayant Narwani (Ph. : 9410201112)
-                            <br> Mr. Lila Ram Narwani <br>Mr. Prakash Chand Narwani
-                            <br> Mr. Harish Kumar Narwani<br> Mr. DR Narwani
-                            <br> Mr. Kamlesh Narwani <br>Mr. Manohar Pahlajani </p>
+                        <p>Mamta & Indra Kumar Narwani (Ph. : 9412169996)<br> Jayant Narwani (Ph. : 9410201112)
+                            <br> Meera & Lila Ram Narwani <br>Tara & Prakash Chand Narwani
+                            <br> Neetu & Harish Kumar Narwani<br> Kanta & DR Narwani
+                            <br> Roshani & Kamlesh Narwani <br>Sangeeta & Manohar Pahlajani </p>
                     </div>
                 </div>
             </div>
@@ -565,7 +565,6 @@
                                         <i class="ti-plus"></i>
                                     </div>
                                 </a>
-                                
                             </div>
                             <div class="grid Pre-Wedding">
                                 <a href="assets/images/gallery/img-6.jpg" class="fancybox" data-fancybox-group="gall-1">
