--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                         <img src="assets/images/story/img-4.jpg" alt class="img img-responsive">
                                         <div class="video-btn">
                                             <ul>
-                                                <li><a href="https://www.youtube.com/watch?v=tm-YxjrQVZw" class="video-btn" data-type="iframe">
+                                                <li><a href="https://www.youtube.com/embed/tm-YxjrQVZw?autoplay=1" class="video-btn" data-type="iframe">
                                                     <i class="fi flaticon-play-button"></i>
                                                 </a>
                                                 </li>
@@ -600,6 +600,9 @@
                                         <div class="col-12 col-sm-6">
                                             <input type="text" placeholder="Your Name*" id="fname" name="name">
                                         </div>
+                                        <div class="col-12  col-sm-6">
+                                            <input type="text" placeholder="Your Location*" id="email" name="email">
+                                        </div>
 
                                         <div class="col-12 col-sm-12">
                                             <textarea class="contact-textarea" placeholder="Message" name="blessings"></textarea>
@@ -644,7 +647,7 @@
                 <i class="fi flaticon-play-button"></i>
             </button>
             <div class="music-holder">
-                <iframe src="https://www.youtube.com/watch?v=tm-YxjrQVZw"></iframe>
+                <iframe src="https://www.youtube.com/embed/tm-YxjrQVZw?autoplay=1"></iframe>
             </div>
         </div>
         <!-- end music box -->
